# Vcpkg-Examples

./: .gitignore  CMakeLists.txt  README.en.md  README.md  vcpkg.json
.github/workflows/: manifest.yml  readme.yml  vcpkg-downloads-cache.yml  vcpkg.yml
